--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
   <table width= "100%" cellspacing="0">
   <tr bgcolor="#3b5998">
-  <td width="55%">   <img  src="images/fb.png" width="220"></td>
+  <td width="55%">   <img  src="images/fb.png" width="200"></td>
   <td align="left">  <input type="text"><input type="text">
                      <input type="button" value="LOGIN">
      </td>
@@ -13,8 +13,39 @@
      <tr bgcolor="#edf0f5" hight="600px">
      	<id valign="top" align="center"><br><br>
      		<table border="0" width="80%">
-     			<\tr>
-     			<td><h2><font face="verdana">connect with friends and the world
+     		</tr>
+     			<td><h2><font face="verdana">connect with friends and the world around you on Facebook</font></h2></td>
+        </tr>
+        <tr>
+          <td><font face="verdana"><br>
+                         <img src="images/img1.jpg" width="50">&nbsp;&nbsp;see photos and updates from friends in News Feed.<br><br>
+                         <img src="images/img2.jpg" width="50">&nbsp;&nbsp;Share what's new in your life on your Timeline.<br><br>
+                         <img src="images/img3.jpg" width="50">&nbsp;&nbsp; Find more what you're looking for with Graph Search.<br>
+                       </font>
+                     </td>
+                       <td valign="top" align="center">
+                        <h1>Sign Up</h1>
+                        <table border="0"cellspacing="10">
+                          <tr>
+                            <td><input type="text" placeholder="FastName"style="hight:30px"size="30"></td><td align="left"><input type"text" placeholder="Last Name"style="hight:30px"size"50"></td>
+                          </tr>
+                          <tr>
+                            <td colspan="2"><input type="text" size="60"placeholder="Mobile Number"style="hight:40px"></td>
+                             </tr>
+                          <tr>
+                            <td colspan="2"><input type="text" size="60"placeholder="Email"style="hight:40px"></td> 
+                          </tr>
+                          <tr>
+                            <td colspan="2"><input type="text" size="60"placeholder="Password"style="hight:40px"></td>
+                            </tr>
+                            <tr>
+                              <td colspan="2"><font color="#666666"face="verdana,arial,helvetica,sans-serif" size="1">By clicking Sign Up,You agree to our Terms and that you have read our Data Use Policy,include our cookie Use.</font></td>
+                            </tr>
+                            <tr>
+                              <td colspan="2"><img src="images/signup.jpg" width="140">
+                     </td>
+                   </tr>
+
 
      </table>  
      
